# aviso-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  skaffold.yaml
.github/: actionlint.yaml
.github/ci/: Dockerfile
.github/workflows/: ci-image.yml  ci.yaml  docs-sites.yaml  publish-crate.yaml  release.yaml
.sisyphus/evidence/: task-5-6-check.txt
aviso-ecmwf/: Cargo.toml
aviso-ecmwf/src/: cache.rs  checker.rs  client.rs  lib.rs
aviso-ecpds/: Cargo.toml  README.md
aviso-ecpds/src/: cache.rs  checker.rs  client.rs  config.rs  lib.rs
aviso-ecpds/tests/: contract.rs
aviso-ecpds/tests/fixtures/: empty_user.json  populated_user.json  record_missing_target_field.json  success_no.json
aviso-validators/: Cargo.toml  README.md
aviso-validators/src/: constraints.rs  date.rs  enum_handler.rs  expver.rs  float.rs  int.rs  lib.rs  point.rs  polygon.rs  string.rs  time.rs  types.rs
benches/: constraint_matcher_benchmark.rs  notification_backend_benchmark.rs
configuration/: config.yaml  config.yaml.example
docs/: book.toml
docs/src/: SUMMARY.md  admin-operations.md  api-errors.md  architecture.md  authentication.md  backend-development.md  backend-in-memory.md  backend-jetstream.md  backends-overview.md  concepts.md  configuration-reference.md  configuration.md  deployment-modes.md  ecpds-runbook.md  getting-started.md  installation.md  introduction.md  jetstream-settings.md  payload-contract.md  schema-guide.md  streaming-semantics.md  topic-encoding.md
docs/src/practical-examples/: admin-operations.md  basic-notify-watch-replay.md  constraint-filtering.md  overview.md  replay-starting-points.md  spatial-filtering.md
docs/theme/: custom.css  logo-theme.js
scripts/: auth-o-tron-docker.sh  example_auth_config.yaml  init_nats.sh  init_nui.sh  smoke_test.py  smoke_test.sh
scripts/workflow-templates/auth-o-tron/.github/workflows/: docs-sites.yaml
scripts/workflow-templates/auth-o-tron/docs/: book.toml
scripts/workflow-templates/auth-o-tron/docs/src/: index.md
scripts/workflow-templates/qubed/.github/workflows/: docs-sites.yaml
src/: configuration.rs  error.rs  lib.rs  main.rs  metrics.rs  openapi.rs  startup.rs  telemetry.rs
src/auth/: client.rs  middleware.rs  mod.rs
src/cloudevents/: conversion.rs  defaults.rs  handler.rs  mod.rs  validation.rs
src/configuration/: auth.rs  global.rs  loader.rs  mod.rs  types.rs  units.rs  validation.rs
src/handlers/: backend.rs  cloudevent.rs  conversion.rs  mod.rs  notification.rs  notification_processor.rs  operation_validation.rs  request_processor.rs  storage.rs  validation.rs
src/middleware/: access_log.rs  http_metrics.rs  mod.rs  request_id.rs
src/notification/: handler.rs  mod.rs  processor.rs  registry.rs  spatial.rs  topic_builder.rs  topic_codec.rs  topic_parser.rs  types.rs  wildcard_matcher.rs
src/notification/validators/: date_handler.rs  enum_handler.rs  expver_handler.rs  int_handler.rs  mod.rs  payload_validator.rs  polygon_handler.rs  string_handler.rs  time_handler.rs
src/notification_backend/: in_memory.rs  jetstream.rs  metered.rs  mod.rs  replay.rs
src/notification_backend/in_memory/: backend.rs  config.rs  mod.rs  stats.rs
src/notification_backend/jetstream/: admin.rs  backend.rs  config.rs  connection.rs  mod.rs  publisher.rs  replay.rs  streams.rs  subscriber.rs  subscriber_utils.rs
src/routes/: admin.rs  health_check.rs  home.rs  mod.rs  notify.rs  replay.rs  schema.rs  streaming.rs  watch.rs
src/sse/: helpers.rs  live.rs  mod.rs  replay.rs  types.rs
src/static/: index.html
src/types/: mod.rs  request.rs  response.rs
tests/: cloudevents.rs
tests/api/: admin.rs  auth.rs  ecpds_auth.rs  from_date.rs  health_check.rs  helpers.rs  main.rs  polygon_roundtrip.rs  request_id.rs  schema.rs  streaming.rs  streaming_jetstream.rs  strict_schema.rs  test_utils.rs
