[package]
name = "aviso-server"
version = "0.1.2"
edition = "2024"
authors = ["Samet Demir <samet.demir@ecmwf.int>",
           "James Hawkes <james.hawkes@ecmwf.int>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aviso_server"

[dependencies]
aviso-validators = { path = "aviso-validators", features = ["openapi"] }
actix-web = "4.11.0"
actix-files = "0.6.8"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
config = "0.15.17"
dirs = "6"
serde-aux = "4.7.0" # brings extra serde traits
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"# forwards log crate events to tracing
tracing-actix-web = "0.7.19"
async-trait = "0.1.89"
anyhow = "1.0.100"
cloudevents-sdk = "0.8"
serde_json = "1.0.145"
chrono = "0.4.42"
regex = "1.11.3"
async-nats = "0.43.1"
futures = "0.3.31"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
geo = "0.31.0"
geo-types = "0.7.17"

[dependencies.reqwest]
version = "0.12.23"
default-features = false
# `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[[bench]]
name = "notification_backend_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
