[package]
name = "aviso-server"
version = "0.3.0"
edition = "2024"
authors = ["Samet Demir <samet.demir@ecmwf.int>",
           "James Hawkes <james.hawkes@ecmwf.int>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aviso_server"

[dependencies]
aviso-validators = { path = "aviso-validators", features = ["openapi"] }
actix-web = "4.12"
actix-files = "0.6"
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.15"
dirs = "6"
serde-aux = "4.7" # brings extra serde traits
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-log = "0.2"# forwards log crate events to tracing
tracing-actix-web = "0.7"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
cloudevents-sdk = "0.9"
serde_json = "1"
chrono = "0.4"
time = "0.3"
regex = "1"
async-nats = "0.46"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
geo = "0.32"
geo-types = "0.7"

[[bench]]
name = "constraint_matcher_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
reqwest = { version = "0.13", default-features = true, features = ["json"] }
