[package]
name = "aviso-ecpds"
version = "0.7.1"
edition = "2024"
description = "ECPDS destination authorization plugin for aviso-server."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ecmwf/aviso-server"
homepage = "https://github.com/ecmwf/aviso-server"
documentation = "https://docs.rs/aviso-ecpds"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
futures = "0.3"
tracing = "0.1"
thiserror = "2"
url = "2"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
