[package]
name = "aviso-validators"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
utoipa = { version = "5.4.0", optional = true }

[features]
openapi = ["utoipa"]
