[package]
name = "aviso-validators"
version = "0.7.1"
edition = "2024"
description = "Validation primitives used by aviso-server for identifier and payload checks."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ecmwf/aviso-server"
homepage = "https://github.com/ecmwf/aviso-server"
documentation = "https://docs.rs/aviso-validators"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
utoipa = { version = "5.5", optional = true }

[features]
openapi = ["utoipa"]
